fix <ns-row>/<ns-col> gap

--- a/ui/src/styles/core/flex.scss
+++ b/ui/src/styles/core/flex.scss
@@ -8,11 +8,13 @@
 .col {
   display: flex;
   flex-direction: column;
+  gap: var(--gap);
 }
 .flex-row,
 .row {
   display: flex;
   flex-direction: row;
+  gap: var(--gap);
 }
 .flex-col-r {
   flex-direction: column-reverse;
